--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
       "email": "lobtao@qq.com"
     }
   ],
+  "minimum-stability": "dev",
+  "require": {
+    "php": ">=5.4.0"
+  },
   "autoload": {
     "psr-4": {
       "think\\org\\": "php/"
